--- a/backend-service-3.yaml
+++ b/backend-service-3.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name:   # TODO: Specify a unique service name if deploying multiple services
+  name: flask-backend-service-3
 spec:
   type: ClusterIP
   selector:
-    app: flask-backend
+    app: flask-backend-3
   ports:
     - port: 5001
       targetPort: 5001
+      
